--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-daterangepicker-material",
-  "version": "1.2.7",
+  "name": "ngx-material-daterangepicker",
+  "version": "1.0.0",
   "description": "Angular 2+ date range picker (with material design theme)",
   "keywords": [
     "angular2",
@@ -17,7 +17,7 @@
     "moment",
     "picker"
   ],
-  "homepage": "https://github.com/fetrarij/ngx-daterangepicker-material",
+  "homepage": "https://github.com/aliarshad9691/ngx-material-daterangepicker.git",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -29,13 +29,13 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "ngc": "./node_modules/.bin/ngc -p tsconfig.json",
-    "gh-pages": "ng build --prod --no-aot --base-href=\"/ngx-daterangepicker-material/\" && ngh --dir demo/dist",
+    "gh-pages": "ng build --prod --no-aot --base-href=\"/ngx-material-daterangepicker/\" && ngh --dir demo/dist",
     "build": "ng-packagr -p package.json"
   },
-  "author": "Fetrarijaona R.",
+  "author": "Ali Arshad",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fetrarij/ngx-daterangepicker-material.git"
+    "url": "https://github.com/aliarshad9691/ngx-material-daterangepicker.git"
   },
   "peerDependencies": {
     "moment": "^2.21.0"
@@ -76,7 +76,7 @@
     "ts-node": "4.1.0",
     "tsickle": "^0.27.2",
     "tslint": "5.9.1",
-    "typescript": "2.4.2",
+    "typescript": "3.1.3",
     "zone.js": "^0.8.17"
   },
   "$schema": "./node_modules/ng-packagr/package.schema.json",
